--- a/code/a3_task3_samantha_rozal.Rmd
+++ b/code/a3_task3_samantha_rozal.Rmd
@@ -68,10 +68,11 @@ Section iii of Section 1-- I need to add a 2-3 sentanece description...
 # Section 2
 
 ### Explore purple urchin counts by site and year
-create a subset entitled `purple_urchins` by filtering only for purple urchins using the `filter()` function
+create a subset entitled `purple_urchins` by filtering only for purple urchins using the `filter()` function and convert the date class to "Date"
 ```{r}
 purple_urchins <- urchins_clean %>%
-  filter(common_name == "Purple Urchin") 
+  filter(common_name == "Purple Urchin") %>% 
+  mutate(new_date=mdy(date))
 
 ```
 
